JO-2007-05-23-0: RFE:         Arco should support webconsole 3.0.x
                 Bugster:     6481737
                 Changed:     arcorun, inst_reporting, build.xml, build.properties,
                              util, src
                 Review:      AP

AP-2007-05-09-0: Bugfix:      o arcorun can not be used as sge_admin user if the toc 
                              file is not available
                              o Need a possibility to update exiting example queries 
                              for the ARCo web application
                 Bugster:     6355674, 6514085
                 Issue:       -, 2164
                 Changed:     inst_reporting
                 Review:      JG

JO-2007-05-04-1: Enhancem.:   Added code for Advanced Reservation
                 Changed:     dbwriter, reporting, common, testsuite 
                 Review:      JG, EB          

JO-2007-05-04-0: CVS        Created V61_BRANCH
----------------------------------------------

RD-2007-04-24-0: CVS        Created V61_TAG
-------------------------------------------

JO-2007-04-24-0: Bugfix:      Rollback commit from JO-2007-02-05-0:
                              Code change throws Exception when trying to edit Result
                 Review:      JG

JO-2007-04-20-0: Bugfix:      Pivot for ARCo Accounting Queries does not show all the fields
                 Bugster:     6546370
                 Issue:       2230
                 Review:      EB

AP-2007-04-13-0: Bugfix:      Updating the online documentation. Adding
                              the description of statistic tables.
                 Bugster:     6545277

RD-2007-03-14-0: CVS          Created V61beta2_TAG
--------------------------------------------------

JO-2007-03-13-0: Bugfix:      DBwriter should not use AutoCommit mode
                 Bugster:     6506690
                 Issue:       2139
                 Changed:     dbwriter, test
                 Review:      RH
