@@ -34,16 +34,15 @@
 
 cd `dirname $0`
 ARCO_HOME=`pwd`
-SGE_ROOT=`echo $SGE_ROOT`
-SGE_CELL=`echo $SGE_CELL`
 
-if [ $SGE_ROOT="" ]; then
+if [ $SGE_ROOT = "" ]; then
    echo "Please set \$SGE_ROOT and then run the script again "
    exit 1
-elif [ $SGE_CELL="" ]; then
+elif [ $SGE_CELL = "" ]; then
    echo "Please set \$SGE_CELL and then run the script again "
    exit 1
 fi
+
 
 CP=$ARCO_HOME/WEB-INF/classes
 for i in $ARCO_HOME/WEB-INF/lib/*.jar ; do
